force-app/main/default/objects/Depense__c/Depense__c.object-meta.xml
<CustomObject>
    <description>Cette table servira à gérer toutes les dépenses relatives à une tâche  ( déplacement , maintenance chez le client , achat
de matériel informatique en. interne...)</description>
    <label>Depense</label>
    <nameField>
        <label>Depense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>