force-app/main/default/objects/Depense__c/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <description>Date de création de la demande</description>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>