force-app/main/default/objects/Depense__c/fields/ModifiedOn__c.field-meta.xml
<CustomField>
    <fullName>ModifiedOn__c</fullName>
    <description>Date de modification</description>
    <inlineHelpText>Date de modification</inlineHelpText>
    <label>Dare de modification</label>
    <type>DateTime</type>
</CustomField>