force-app/main/default/objects/Depense__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Montant de la demande</description>
    <inlineHelpText>Montant de la demande</inlineHelpText>
    <label>Montant</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>