force-app/main/default/objects/Depense__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <description>Motif de la demande</description>
    <inlineHelpText>Motif de la demande</inlineHelpText>
    <label>Motif</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaire</fullName>
            </value>
            <value>
                <fullName>Visite client</fullName>
            </value>
            <value>
                <fullName>Achat de matériel</fullName>
            </value>
            <value>
                <fullName>Réparation de matériel</fullName>
            </value>
            <value>
                <fullName>Bonus sur salaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>