force-app/main/default/objects/Depense__c/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>le projet lué à cette dépense</description>
    <inlineHelpText>le projet lué à cette dépense</inlineHelpText>
    <label>Projet</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipLabel>Depenses</relationshipLabel>
    <relationshipName>Depenses</relationshipName>
    <type>Lookup</type>
</CustomField>