force-app/main/default/objects/Depense__c/fields/Tache__c.field-meta.xml
<CustomField>
    <fullName>Tache__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cette dépense est relative à une tâche</description>
    <label>Tâche</label>
    <referenceTo>Tache__c</referenceTo>
    <relationshipLabel>Depenses</relationshipLabel>
    <relationshipName>Depenses</relationshipName>
    <type>Lookup</type>
</CustomField>