force-app/main/default/objects/Depense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>Motif__c</columns>
    <columns>Tache__c</columns>
    <columns>Projet__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les dépenses</label>
</ListView>